Portraits: download from clashoflegends/portraits GitHub release + version check
Fetch portraits.zip from the public portraits repo's latest release (stable URL, no GoDaddy
manifest); PortraitsChecker compares the release tag to PortraitsVersion and notifies via a
clickable toast, or downloads silently when autoDownloadPortraits is on. Settings gains an
Auto-download checkbox (enabled once portraits are present). Resync bundled PbmCommons.jar.